syntax = "proto3";

service ControleDispositivosService {
    rpc EnviarComando (Command) returns (DeviceInfo) {}
}

message DeviceInfo {
    string device_id = 1;            //  "LIX_1234
    string type = 2;                 //  "sensor", "atuador"
    string grpc_endpoint = 3;        //  "localhost:50051"
    string status = 4;               //  "ON", "OFF", "ERROR"
    repeated string value_name = 5;  //  "{temperatura, tempo de espera}"
    repeated string value = 6;       //  "{25.5 , 5s}"
}

message Command {
    string action = 1;               // "LIGAR", "DESLIGAR", etc.
    string parameter = 2;            // "74%", "15" (segundos)
}

message Discover {
    string ip = 1;                   // "192.68.70.123"
    int32 port_multicast = 2;        // "5000"
    repeated string queue_type = 3;  // "{temperatura, trafego}"
    repeated string queue_name = 4;  // "{temp, traf}"
}
